@@ -3237,6 +3237,295 @@ literal|false
 argument_list|)
 expr_stmt|;
 block|}
+annotation|@
+name|Test
+DECL|method|testDirectCopy ()
+specifier|public
+name|void
+name|testDirectCopy
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|Path
+name|testRoot
+init|=
+operator|new
+name|Path
+argument_list|(
+name|testRootDir
+argument_list|,
+literal|"testPutFile"
+argument_list|)
+decl_stmt|;
+name|lfs
+operator|.
+name|delete
+argument_list|(
+name|testRoot
+argument_list|,
+literal|true
+argument_list|)
+expr_stmt|;
+name|lfs
+operator|.
+name|mkdirs
+argument_list|(
+name|testRoot
+argument_list|)
+expr_stmt|;
+name|Path
+name|target_COPYING_File
+init|=
+operator|new
+name|Path
+argument_list|(
+name|testRoot
+argument_list|,
+literal|"target._COPYING_"
+argument_list|)
+decl_stmt|;
+name|Path
+name|target_File
+init|=
+operator|new
+name|Path
+argument_list|(
+name|testRoot
+argument_list|,
+literal|"target"
+argument_list|)
+decl_stmt|;
+name|Path
+name|srcFile
+init|=
+operator|new
+name|Path
+argument_list|(
+name|testRoot
+argument_list|,
+operator|new
+name|Path
+argument_list|(
+literal|"srcFile"
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|lfs
+operator|.
+name|createNewFile
+argument_list|(
+name|srcFile
+argument_list|)
+expr_stmt|;
+comment|// If direct write is false , then creation of "file1" ,will delete file
+comment|// (file1._COPYING_) if already exist.
+name|checkDirectCopy
+argument_list|(
+name|srcFile
+argument_list|,
+name|target_File
+argument_list|,
+name|target_COPYING_File
+argument_list|,
+literal|false
+argument_list|)
+expr_stmt|;
+name|shell
+operator|.
+name|run
+argument_list|(
+operator|new
+name|String
+index|[]
+block|{
+literal|"-rm"
+block|,
+name|target_File
+operator|.
+name|toString
+argument_list|()
+block|}
+argument_list|)
+expr_stmt|;
+comment|// If direct write is true , then creation of "file1", will not create a
+comment|// temporary file and will not delete (file1._COPYING_) if already exist.
+name|checkDirectCopy
+argument_list|(
+name|srcFile
+argument_list|,
+name|target_File
+argument_list|,
+name|target_COPYING_File
+argument_list|,
+literal|true
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|checkDirectCopy (Path srcFile, Path target_File, Path target_COPYING_File,boolean direct)
+specifier|private
+name|void
+name|checkDirectCopy
+parameter_list|(
+name|Path
+name|srcFile
+parameter_list|,
+name|Path
+name|target_File
+parameter_list|,
+name|Path
+name|target_COPYING_File
+parameter_list|,
+name|boolean
+name|direct
+parameter_list|)
+throws|throws
+name|Exception
+block|{
+name|int
+name|directWriteExitCode
+init|=
+name|direct
+condition|?
+literal|0
+else|:
+literal|1
+decl_stmt|;
+name|shell
+operator|.
+name|run
+argument_list|(
+operator|new
+name|String
+index|[]
+block|{
+literal|"-copyFromLocal"
+block|,
+name|srcFile
+operator|.
+name|toString
+argument_list|()
+block|,
+name|target_COPYING_File
+operator|.
+name|toString
+argument_list|()
+block|}
+argument_list|)
+expr_stmt|;
+name|int
+name|srcFileexist
+init|=
+name|shell
+operator|.
+name|run
+argument_list|(
+operator|new
+name|String
+index|[]
+block|{
+literal|"-cat"
+block|,
+name|target_COPYING_File
+operator|.
+name|toString
+argument_list|()
+block|}
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|0
+argument_list|,
+name|srcFileexist
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+operator|!
+name|direct
+condition|)
+block|{
+name|shell
+operator|.
+name|run
+argument_list|(
+operator|new
+name|String
+index|[]
+block|{
+literal|"-copyFromLocal"
+block|,
+name|srcFile
+operator|.
+name|toString
+argument_list|()
+block|,
+name|target_File
+operator|.
+name|toString
+argument_list|()
+block|}
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+name|shell
+operator|.
+name|run
+argument_list|(
+operator|new
+name|String
+index|[]
+block|{
+literal|"-copyFromLocal"
+block|,
+literal|"-d"
+block|,
+name|srcFile
+operator|.
+name|toString
+argument_list|()
+block|,
+name|target_File
+operator|.
+name|toString
+argument_list|()
+block|}
+argument_list|)
+expr_stmt|;
+block|}
+comment|// cat of "target._COPYING_" will return exitcode :
+comment|// as 1(file does not exist), if direct write is false.
+comment|// as 0, if direct write is true.
+name|srcFileexist
+operator|=
+name|shell
+operator|.
+name|run
+argument_list|(
+operator|new
+name|String
+index|[]
+block|{
+literal|"-cat"
+block|,
+name|target_COPYING_File
+operator|.
+name|toString
+argument_list|()
+block|}
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|directWriteExitCode
+argument_list|,
+name|srcFileexist
+argument_list|)
+expr_stmt|;
+block|}
 DECL|method|createFile (Path .... paths)
 specifier|private
 name|void
